fixing api and implementation
