# service/api/api-handler.go
@@ -16,9 +16,9 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/id/:userID", rt.wrap(HandleGetUserProfileID))
 	rt.router.GET("/photos", rt.wrap(handleGetPhotos))
 	rt.router.GET("/users", rt.wrap(HandleGetAllUsers))
-	rt.router.GET("/photos/:photoId/comment/", rt.wrap(handleGetComments))
+	rt.router.GET("/photos/:photoId/comment", rt.wrap(handleGetComments))
 	rt.router.GET("/stream", rt.wrap(handleGetMyStream))
-	rt.router.GET("/users/followers/:username", rt.wrap(handleGetFollowers))
+	rt.router.GET("/users/:username/followers", rt.wrap(handleGetFollowers))
 	rt.router.GET("/photos/:photoId", rt.wrap(handleGetPhoto))
 	rt.router.GET("/users/:userId/username", rt.wrap(handleGetUsername))
 	rt.router.GET("/photos/:photoId/likes", rt.wrap(HandleIsLiked))
@@ -28,14 +28,14 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/photos/:photoId/comments", rt.wrap(handleCommentPhoto))
 	rt.router.POST("/photos/:photoId/likes", rt.wrap(HandleLikePhoto))
 	rt.router.POST("/users/bans/:userId", rt.wrap(handleBanUser))
-	rt.router.POST("/users/follows/:userId", rt.wrap(HandleFollowUser))
+	rt.router.POST("/users/:userId/follows", rt.wrap(HandleFollowUser))
 	rt.router.POST("/session", rt.wrap(doLogin))
 	rt.router.POST("/photos", rt.wrap(handleUploadPhoto))
-	rt.router.PATCH("/users/:username", rt.wrap(HandleSetUsername))
+	rt.router.PATCH("/users/:userId/username", rt.wrap(HandleSetUsername))
 	rt.router.DELETE("/photos/:photoId/likes", rt.wrap(HandleUnlikePhoto))
 	rt.router.DELETE("/photos/:photoId", rt.wrap(handleDeletePhoto))
 	rt.router.DELETE("/users/bans/:userId", rt.wrap(handleUnbanUser))
-	rt.router.DELETE("/users/follows/:userId", rt.wrap(HandleUnfollowUser))
+	rt.router.DELETE("/users/:userId/follows", rt.wrap(HandleUnfollowUser))
 	rt.router.DELETE("/comments/:commentId", rt.wrap(handleUncommentPhoto))
 
 	return rt.router
